Handle clock change (#249)
* handle clock change for summer saving time

* handle clock change for summer saving time, update tests

* handle clock change for summer saving time, update tests, fix sonar issues

* handle clock change for summer saving time, update tests, complete coverage

* refactoring to have precise daylight saving time management

* correct id inside test files

* add final to variable

* post review update

* post review update

* clean up with rabbit review

---------

Co-authored-by: schwitzguebelmar <marc.schwitzguebel_externe@rte-france.com>